--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</ul>
 	</nav>
 	<section id="Home">
-		<p> I am Michaela Joy T. Sumaylo. A web developer </p>
+		<p> I am Michaela Joy T. Sumaylo </p>
 	</section>
 	<section id ="About">
 		<p>Graduate from Mindanao State University - Buug, BSIT Major in Database Systems</p>
