--- a/index.html
+++ b/index.html
@@ -1,91 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SEMINAR</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Michaela's Portfolio</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
-      background: #f4f6f9;
+      background-color: #f7f9fc;
       color: #333;
-      line-height: 1.6;
     }
 
-    nav {
-      background: #007bff;
-      padding: 1rem;
-    }
-
-    nav ul {
+    .hero {
       display: flex;
+      flex-direction: column;
+      align-items: center;
       justify-content: center;
-      list-style: none;
+      text-align: center;
+      padding: 60px 20px;
+      background: linear-gradient(to right, #007bff, #6f42c1);
+      color: white;
     }
 
-    nav ul li {
-      margin: 0 15px;
-      color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-      transition: color 0.3s ease;
+    .hero img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid white;
+      margin-bottom: 20px;
     }
 
-    nav ul li:hover {
-      color: #ffdd57;
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
     }
 
-    section {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
-    section#Home {
-      border-left: 5px solid #007bff;
-    }
-
-    section#About {
-      border-left: 5px solid #28a745;
-    }
-
-    section#Contact {
-      border-left: 5px solid #dc3545;
-    }
-
-    p {
+    .hero p {
       font-size: 1.2rem;
+      margin-bottom: 25px;
+    }
+
+    .hero button {
+      padding: 12px 24px;
+      background-color: white;
+      color: #007bff;
+      border: none;
+      border-radius: 30px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .hero button:hover {
+      background-color: #f1f1f1;
+    }
+
+    @media (min-width: 768px) {
+      .hero {
+        flex-direction: row;
+        text-align: left;
+        justify-content: space-around;
+      }
+
+      .hero .text {
+        max-width: 600px;
+      }
     }
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li onclick="document.getElementById('Home').scrollIntoView({behavior: 'smooth'});">Home</li>
-      <li onclick="document.getElementById('About').scrollIntoView({behavior: 'smooth'});">About</li>
-      <li onclick="document.getElementById('Contact').scrollIntoView({behavior: 'smooth'});">Contact</li>
-    </ul>
-  </nav>
 
-  <section id="Home">
-    <p>I am <strong>Michaela Joy T. Sumaylo</strong>.</p>
+  <section class="hero" id="home">
+    <img src="https://via.placeholder.com/150" alt="Michaela Joy T. Sumaylo" />
+    <div class="text">
+      <h1>Hello, I'm Michaela Joy T. Sumaylo</h1>
+      <p>Aspiring Web Developer | BSIT Graduate - Major in Database Systems</p>
+      <button onclick="document.getElementById('projects').scrollIntoView({ behavior: 'smooth' })">
+        View My Work
+      </button>
+    </div>
   </section>
 
-  <section id="About">
-    <p>Graduate from <strong>Mindanao State University - Buug</strong>, BSIT Major in Database Systems.</p>
+  <!-- Placeholder for next sections -->
+  <section id="projects" style="height: 500px; padding: 40px;">
+    <h2>Projects Section</h2>
+    <p>Project details go here...</p>
   </section>
 
-  <section id="Contact">
-    <p>Contact us at <strong>+63 910 286 9244</strong></p>
-  </section>
 </body>
 </html>
