--- a/index.html
+++ b/index.html
@@ -73,12 +73,132 @@
         max-width: 600px;
       }
     }
+
+ /* ABOUT ME SECTION */
+    #about {
+      max-width: 900px;
+      margin: 60px auto;
+      padding: 40px 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    #about h2 {
+      font-size: 2rem;
+      color: #007bff;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    #about p {
+      font-size: 1.1rem;
+      line-height: 1.8;
+      text-align: justify;
+    }
+
+     /* SECTION STYLING */
+    section {
+      max-width: 900px;
+      margin: 60px auto;
+      padding: 40px 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    section h2 {
+      font-size: 2rem;
+      color: #007bff;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    section p {
+      font-size: 1.1rem;
+      line-height: 1.8;
+      text-align: justify;
+    }
+
+    /* SKILLS SECTION */
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .skill {
+      background-color: #f0f4ff;
+      padding: 15px;
+      border-radius: 8px;
+      text-align: center;
+      font-weight: 600;
+      color: #0056b3;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+     /* PROJECTS SECTION */
+    .projects-list {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      margin-top: 20px;
+    }
+
+    .project {
+      background-color: #eef4ff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    .project h3 {
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    .project p {
+      color: #555;
+      line-height: 1.6;
+    }
+
+    .project a {
+      display: inline-block;
+      margin-top: 10px;
+      color: #007bff;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .project a:hover {
+      text-decoration: underline;
+    }
+
+/* CONTACT SECTION */
+#contact .contact-info {
+  margin-top: 20px;
+  line-height: 2;
+  text-align: left;
+}
+
+#contact a {
+  color: #007bff;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+#contact a:hover {
+  text-decoration: underline;
+}
+
+
   </style>
 </head>
 <body>
 
   <section class="hero" id="home">
-    <img src="https://via.placeholder.com/150" alt="Michaela Joy T. Sumaylo" />
+    <img src="img/michaelajoy.png" alt="Michaela Joy T. Sumaylo" />
     <div class="text">
       <h1>Hello, I'm Michaela Joy T. Sumaylo</h1>
       <p>Aspiring Web Developer | BSIT Graduate - Major in Database Systems</p>
@@ -89,10 +209,80 @@
   </section>
 
   <!-- Placeholder for next sections -->
-  <section id="projects" style="height: 500px; padding: 40px;">
+  <section id="projects" style="height: 100px; padding: 40px;">
     <h2>Projects Section</h2>
-    <p>Project details go here...</p>
+    <p>In Progress...</p>
   </section>
+
+   <!-- ABOUT ME SECTION -->
+  <section class="about" id="about">
+    <h2>About Me</h2>
+    <p>
+      I am a recent graduate from Mindanao State University - Buug Campus with a Bachelor of Science in Information Technology, majoring in Database Systems. 
+      I’m passionate about building clean, user-friendly websites and applications. 
+      During my studies, I developed a solid foundation in web development, programming, and database management. 
+      I enjoy solving problems through code and continuously learning new tools and technologies to improve my craft.
+      <br><br>
+      My goal is to contribute meaningfully to IT projects that make a real-world impact, and I’m currently looking for opportunities where I can grow as a web developer and collaborate with innovative teams.
+    </p>
+  </section>
+
+   <!-- SKILLS SECTION -->
+  <section id="skills">
+    <h2>My Skills</h2>
+    <div class="skills-grid">
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">VB.NET</div>
+      <div class="skill">C++</div>
+      <div class="skill">Java</div>
+      <div class="skill">MySQL</div>
+      <div class="skill">SQL Server</div>
+      <div class="skill">Git & GitHub</div>
+      <div class="skill">Bootstrap</div>
+    </div>
+  </section>
+
+   <!-- PROJECTS SECTION -->
+  <section id="projects">
+    <h2>My Projects</h2>
+    <div class="projects-list">
+      <div class="project">
+        <h3>Thesis & Capstone Archiving System</h3>
+        <p>A web-based system designed for Mindanao State University - Buug Campus to digitally store and retrieve student research documents. Built with PHP, MySQL, and HTML/CSS.</p>
+        <a href="#" target="_blank">View Project (Coming Soon)</a>
+      </div>
+
+      <div class="project">
+        <h3>Portfolio Website</h3>
+        <p>This personal portfolio website showcases my academic background, skills, and projects. It’s responsive and built with only HTML and CSS.</p>
+        <a href="#" target="_blank">View Live (Coming Soon)</a>
+      </div>
+
+       <div class="project">
+    <h3>Tribal Gospel Fellowship Website</h3>
+    <p>A dynamic website for Tribal Gospel Fellowship of Mindanao, Inc., designed to promote upcoming events, youth programs, and Gospel-centered outreach. Created with user-friendly navigation and a vibrant praise-and-worship inspired design.</p>
+    <a href="#" target="_blank">Visit Site (Coming Soon)</a>
+  </div>
+
+      <!-- Add more projects as needed -->
+    </div>
+  </section>
+
+<!-- CONTACT ME SECTION -->
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p>If you'd like to work together or have any questions, feel free to reach out!</p>
+
+  <div class="contact-info">
+    <p><strong>📱 Phone:</strong> +63 910 286 9244</p>
+    <p><strong>📧 Email:</strong> michaela.sumaylo@example.com</p>
+    <p><strong>💼 LinkedIn:</strong> <a href="#" target="_blank">linkedin.com/in/michaelasumaylo</a></p>
+    <p><strong>💻 GitHub:</strong> <a href="#" target="_blank">github.com/Joooy02</a></p>
+  </div>
+</section>
+
 
 </body>
 </html>
