--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
 
   <div class="contact-info">
     <p><strong>📱 Phone:</strong> +63 910 286 9244</p>
-    <p><strong>📧 Email:</strong> michaela.sumaylo@example.com</p>
-    <p><strong>💼 LinkedIn:</strong> <a href="#" target="_blank">linkedin.com/in/michaelasumaylo</a></p>
-    <p><strong>💻 GitHub:</strong> <a href="#" target="_blank">github.com/Joooy02</a></p>
+    <p><strong>📧 Email:</strong> <a href="mailto:kadenmichaelasumaylo@gmail.com" target="_blank">kadenmichaelasumaylo@gmail.com</a></p>
+    <p><strong>💼 LinkedIn:</strong> <a href="https://linkedin.com/in/ella-sumaylo-09a9301b5/" target="_blank">Ella Sumaylo</a></p>
+    <p><strong>💻 GitHub:</strong> <a href="https://github.com/Joooy02" target="_blank">github.com/Joooy02</a></p>
   </div>
 </section>
 
